[package]
name = "aonav"
version = "0.1.0"
edition = "2021"

[dependencies]
# To get WASM to work
instant = { version = "0.1.13", features = [ "wasm-bindgen" ] }
indexmap = { version = "2.10.0", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
egg = "0.10.0"
egraph-serialize = "0.2.0"
clap = { version = "4.5.47", features = ["derive"] }
ansi_term = "0.12.1"
env_logger = "0.11.8"
log = "0.4.28"
rand = "0.9.2"
glob = "0.3.3"
csv = "1.3.1"
rayon = "1.11.0"
egglog = "1.0.0"
rustsat = "0.7.4"
rustsat-cadical = "0.7.4"
jsongraph = "0.1.0"
aograph = "0.5.0"
pbn = "0.4.0"
strum = { version = "0.27.2", features = ["derive"] }
indicatif = { version = "0.18.4", features = ["rayon"] }
wait-timeout = "0.2.1"
